# bevy_project_startup

./: Cargo.toml
bevy_ecs_ldtk/: Cargo.toml
bevy_sepax2d/: Cargo.toml
bevy_sepax2d/src/: components.rs  lib.rs  plugin.rs
builds/windows/: icon.rc
game/: Cargo.toml
game/assets/maps/: demo_map.ldtk
game/assets/player/: player.json.animation.json
game/src/: assets.rs  lib.rs  main.rs  setup.rs
json_asset_loader/: Cargo.toml
json_asset_loader/src/: lib.rs
