[package]
name = "bevy_ecs_ldtk"
#description = "An ECS-friendly ldtk plugin for bevy."
version = "0.1.0"
edition = "2021"
#authors = ["Trevor Lovell <trevorlovelldesign@gmail.com>"]
#repository = "https://github.com/Trouv/bevy_ecs_ldtk"
#Refactor Verison


[dependencies]
bevy_ecs_ldtk_macros = { version = "0.3", optional = true, path = "macros" }
bevy_ecs_tilemap = { version = "0.7.0" }
bevy = { version = "0.8", default-features = false, features = ["bevy_sprite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
hex = "0.4"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
bevy = "0.8"
heron = { version = "4.0.0-alpha.4", features = ["2d"] }
rand = "0.8"