[package]
name = "json_asset_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8", default-features = false, features = ["bevy_asset"] }
serde_json = "1.0.83"
serde = { version = "1" }
anyhow = { version = "1" }

#
# Source: https://github.com/vleue/bevy_embedded_assets
# TO-DO ADD SAVING
#